--- a/src/components/country-list/chart/chart.scss
+++ b/src/components/country-list/chart/chart.scss
@@ -1,19 +1,61 @@
+ul li {
+	list-style: none;
+	
+}
+
+.country-list-title{
+	text-align: center;
+	font-size: large;
+}
+
 .flag{
 	width: 20px;
 	height: 10px;
-
 }
+
 .countries-wrapper{
 	height: calc(100vh-100px);
 	overflow-y: scroll;
+	padding-left: 0px;
+	margin: 5px 0;
+	&::-webkit-scrollbar { width: 5px; height: 5px;}
+&::-webkit-scrollbar-button { width: 10px; background-color: #666; }
+&::-webkit-scrollbar-track {  background-color: #999;}
+&::-webkit-scrollbar-track-piece { background-color: #ffffff;}
+&::-webkit-scrollbar-thumb { height: 1px; background-color: #666; border-radius: 5px;}
+&::-webkit-scrollbar-corner { background-color: #999;}
+&::-webkit-resizer { background-color: #666;}
+}
+.country-wrapper{
+	font-size: large;
+	font-family:sans-serif;
+	margin: 2px 0 ;
+	border-bottom: white 1px solid;
+}
+.country-list-value{
+	color: yellow;
 }
 .country-search{
 	display: flex;
+	justify-content: space-between;
+	box-shadow: inset 0 0 0 1px white;
 
 }
+.country-input{
+	width: calc(100% - 40px);
+	background-color: transparent;
+	border: none;
+	color: white;
+	outline:none;
+}
 .country-keyboard{
-	width: 10%;
-	height: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	width: 45px;
+	height: 26px;
 	background-color: white;
+	border-radius: 5px;
 	margin: 0 5px;
+	background-image: url("../img/keyboard.png");
 }
