--- a/src/components/country-list/country-list.component.scss
+++ b/src/components/country-list/country-list.component.scss
@@ -1,4 +1,6 @@
 @import "./chart/chart.scss";
+
+
 .country-list{
 	position: relative;
 	min-height: 100%;
@@ -10,9 +12,25 @@
 }
 .switch-wrapper{
 	position: absolute;
+	display: flex;
 	color: white;
 	left: 0;
 	bottom: 0;
 	width: 100%;
-	height: 40px;
+	// height: 40px;
+	justify-content: space-between;
+	align-items: center;
+	box-shadow: inset 0 0 0 1px white;
+}
+.title-current-category{
+	// width: 100%;
+	display: inline-block;
+	
+}
+.btn-changes{
+	background-color: transparent;
+	color: white;
+	border: none;
+	font-size: 20px;
+	box-shadow: inset 0 0 0 1px white;
 }
