--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -4,6 +4,17 @@
     box-sizing: border-box;
 }
 
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    margin: 0;
+    padding: 0;
+}
+
 body {
     background: #2c0f0f;
     margin: 0;
@@ -38,11 +49,4 @@ body {
             border: 2px solid #f00bab;
         }
     }
-
-    .table {
-        width: 20%;
-        border: 2px solid #f02d0b;
-        height: 100vh;
-    }
-
 }
