feat: change keyboard style, add click sound

--- a/src/components/keyboard/keyboard.component.scss
+++ b/src/components/keyboard/keyboard.component.scss
@@ -1,28 +1,18 @@
-.use-keyboard-input {
-	display: block;
-	width: 90%;
-	margin: 30px auto;
-	padding: 10px;
-	font-size: 20px;
-	height: calc(100vh - 380px);
-	min-height: 300px;
-}
 
 .keyboard {
 	position: absolute;
 	z-index: 4;
-	left: 0;
+	right: -100%;
 	bottom: 0;
-	width: 50%;
+	width: 100%;
 	padding: 5px 0;
 	background: transparent; 
 	user-select: none;
-	transition: all 0.8s ease-out;
+	transition: all 1s ease-out;
 }
 
 .keyboard--hidden {
 	opacity: 0;
-	visibility: hidden;
 }
 
 .keyboard__keys {
@@ -30,8 +20,8 @@
 }
 
 .keyboard__key {
-	height: 30px;
-	width: 7.5%;
+	height: 40px;
+	width: 8%;
 	max-width: 60px;
 	margin: 2px;
 	border-radius: 4px;
@@ -47,7 +37,6 @@
 	vertical-align: top;
 	padding: 0;
 	-webkit-tap-highlight-color: transparent;
-	position: relative;
 }
 
 .keyboard__key:active {
@@ -58,29 +47,10 @@
 }
 
 .keyboard__key--wide {
-	width: 12%;
+	width: 16%;
 }
 
 .keyboard__key--extra-wide {
-	width: 36%;
+	width: 48%;
 	max-width: 500px;
-}
-
-.keyboard__key--activatable::after {
-	content: "";
-	top: 1px;
-	right: 1px;
-	position: absolute;
-	width: 6px;
-	height: 6px;
-	background: rgba(0, 0, 0, 0.4);
-	border-radius: 50%;
-}
-
-.keyboard__key--active::after {
-	background: #08ff00;
-}
-
-.keyboard__key--dark {
-	background: rgba(0, 0, 0, 0.25);
 }
