--- a/src/components/graph-component/graph.scss
+++ b/src/components/graph-component/graph.scss
@@ -3,7 +3,7 @@
     height: 20%;
     border: 2px solid #f00bab;
     display: flex;
-    justify-content: center;
+    justify-content: space-between;
     position: relative;
 
     .base-markup-btn-increase {
@@ -57,7 +57,7 @@
         order: 4;
     }
     .graph-wrapper-canvas {
-        width: 100%;
+        width: 34%;
         display: flex;
         justify-content: center;
         order: 2;
@@ -72,7 +72,7 @@
         margin-right: 10px;
         margin-top: 10px;
         height: 20px;
-        width: 20%;
+        width: 10%;
         order: 3;
         outline: none;
         background: #25252541;
@@ -92,7 +92,7 @@
 
     .draw-graph-left-select-btn {
         order: 1;
-        width: 20%;
+        width: 10%;
         .draw-graph-select {
             color: #929180;
             margin-left: 10px;
@@ -136,7 +136,11 @@
     top: 5%;
     left: 5%;
     margin: 0 auto;
-    width: 90vw;
-    height: 90vh;
+    width: 90%;
+    height: 90%;
     background: #2c0f0f;
+    canvas {
+        position: relative;
+        top: 30%;
+    }
 }
