--- a/src/components/graph-component/graph.scss
+++ b/src/components/graph-component/graph.scss
@@ -8,6 +8,7 @@
 
     .base-markup-btn-increase {
         position: absolute;
+        z-index: 1100;
         width: 20px;
         height: 20px;
         right: -2px;
@@ -23,7 +24,6 @@
         opacity: 0;
         visibility: hidden;
         transition: 0.5s linear;
-
         img {
             width: 80%;
         }
@@ -139,6 +139,7 @@
     width: 90%;
     height: 90%;
     background: #2c0f0f;
+    z-index: 1200;
     canvas {
         position: relative;
         top: 30%;
