--- a/src/components/country-list/country-list.component.scss
+++ b/src/components/country-list/country-list.component.scss
@@ -2,12 +2,13 @@
 
 .country-list {
 	position: relative;
-	min-height: 100%;
+	min-height: 85%;
 }
 .country-list-wrapper {
 	padding: 5px;
 	padding-bottom: 40px;
 	color: white;
+	overflow: hidden;
 }
 .country-list-switch-wrapper {
 	position: absolute;
