--- a/src/components/global-table/global-table.scss
+++ b/src/components/global-table/global-table.scss
@@ -1,4 +1,4 @@
-$global-table-fz12: 0.67rem;
+$global-table-fz12: 0.62rem;
 $global-table-fz16: 0.89rem;
 $global-table-fz20: 1.11rem;
 $global-table-fz24: 1.33rem;
@@ -8,15 +8,13 @@ $global-table-fz48: 2.7rem;
 
 $global-table-title-color-for-death: #e9ebdc;
 $global-table-color-for-death: #9698a8;
-$global-table-color-for-recovered: #0bf03d;
-$global-table-color-for-case: #f00b0b;
 $global-table-color-white: #ffffff;
 $global-table-stat-color: #ebcbcb;
 
 .table {
-    padding: 0.56rem 0.56rem;
+    padding: 0 0.56rem;
+    padding-right: 0;
     width: 20%;
-    border: 2px solid #f02d0b;
     display: flex;
     color: $global-table-title-color-for-death;
     font-weight: normal;
@@ -26,13 +24,25 @@ $global-table-stat-color: #ebcbcb;
     .global-table-checkbox-wrapper {
         font-size: $global-table-fz12;
         display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
-        margin: 10px 0;
+        padding: 5px;
+        margin-bottom: 10px;
+        background-color: $blue;
+      
 
         .global-table-radio-single {
             display: flex;
-            flex-direction: column;
             align-items: center;
+            justify-content: space-between;
+           
+            margin-bottom: 5px;
+            text-transform: uppercase;
+            width: 42%;
+
+            &:nth-child(odd) {
+                width: 52%;
+              }
 
             .global-table-radio-btn {
                 display: none;
@@ -48,7 +58,7 @@ $global-table-stat-color: #ebcbcb;
             }
 
             .global-table-radio-btn:checked + .global-table-style-radio-btn {
-                background-color: $global-table-color-for-case;
+                background-color: $red;
             }
         }
     }
@@ -59,7 +69,7 @@ $global-table-stat-color: #ebcbcb;
         flex-direction: column;
         overflow: hidden;
         .global-table-title {
-            font-size: $global-table-fz12;
+            @include large-size;
             text-align: center;
         }
         .global-table-amount-global-case {
@@ -67,7 +77,7 @@ $global-table-stat-color: #ebcbcb;
         }
 
         .global-table-item-confirmed-color {
-            color: $global-table-color-for-case;
+            color: $red;
         }
 
         .global-table-item-death-color {
@@ -75,7 +85,7 @@ $global-table-stat-color: #ebcbcb;
         }
 
         .global-table-item-recovered-color {
-            color: $global-table-color-for-recovered;
+            color: $green;
         }
 
         .global-table-switch-wrapper {
@@ -85,46 +95,29 @@ $global-table-stat-color: #ebcbcb;
             margin-top: 0.28rem;
 
             .global-table-btn-changes {
-                width: 1.5rem;
-                height: 1.5rem;
                 background: none;
-                border: 2px solid #9698a8;
-                color: $global-table-color-for-death;
+                color: white;
                 font-size: $global-table-fz20;
                 outline: none;
                 cursor: pointer;
                 transition: 0.3s linear;
-
-                &:hover {
-                    background: rgba(129, 123, 123, 0.534);
-                    color: #000000;
-                    border-color: #000000;
-                }
             }
 
             .global-table-title-current-category {
                 font-size: $global-table-fz16;
-                color: $global-table-color-for-death;
+                color: white;
             }
         }
 
         .global-table-total-case-wrapper {
             overflow: scroll;
             overflow-x: hidden;
-            &::-webkit-scrollbar {
-                width: 0.56rem;
-            }
-            &::-webkit-scrollbar-track {
-                background-color: #999;
-            }
-            &::-webkit-scrollbar-thumb {
-                height: 1.11rem;
-                background-color: #666;
-            }
+            background-color: $blue;
+           @include scroll;
 
             .global-table-table-item {
                 border-top: 2px solid $global-table-color-for-death;
-                padding: 10px 0;
+                padding: 10px 5px;
                 cursor: pointer;
 
                 &:first-child {
@@ -133,7 +126,7 @@ $global-table-stat-color: #ebcbcb;
             }
 
             .global-table-item-confirmed-color {
-                color: $global-table-color-for-case;
+                color: $red;
             }
 
             .global-table-item-death-color {
@@ -141,7 +134,7 @@ $global-table-stat-color: #ebcbcb;
             }
 
             .global-table-item-recovered-color {
-                color: $global-table-color-for-recovered;
+                color: $green;
             }
         }
     }
