--- a/src/assets/css/style.scss
+++ b/src/assets/css/style.scss
@@ -1,10 +1,16 @@
+@import "./mixin.scss";
+@import "../../components/country-list/chart/chart.scss";
 @import "../../components/country-list/country-list.component.scss";
 @import "../../components/keyboard/keyboard.component.scss";
+@import "../../components/graph-component/graph.scss";
+@import "../../components/map/map.scss";
+@import "../../components/map/legend/legendMap.scss";
+@import "../../components/global-table/global-table.scss";
 
 *,
 *::before,
 *::after {
-	box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 h1,
@@ -14,27 +20,34 @@ h4,
 h5,
 h6,
 p {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 body {
-	background: #2c0f0f;
-	margin: 0;
-	padding: 0 30px;
+    display: flex;
+    flex-direction: column;
+    background-color: $darkblue;
+    margin: 0;
+    padding: 0 30px;
+    font-family: Quicksand, sans-serif;
+    justify-content: space-between;
+    min-height: 100vh;
+    
 }
 
 
 header {
-    padding: 10px 0;
+    padding: 15px 0;
     display: flex;
     justify-content: center;
     align-items: center;
+
     .header-title {
         order: 1;
         text-transform: uppercase;
         color: beige;
-        font-size: 18px;
+        font-size: 25px;
     }
 
     .header-logo {
@@ -45,24 +58,28 @@ header {
 }
 
 footer {
-    margin-top: 10px;
+    background-color: $blue;
+    padding: 15px;
     .footer-dev-ops {
         display: flex;
         justify-content: space-between;
         align-items: center;
-        
+
         .dev-ops-list {
             order: 1;
             margin: 2px 0;
             display: flex;
+
             .dev-ops-list-person {
                 color: beige;
                 margin-right: 10px;
+
                 .dev-ops-ref {
                     display: flex;
                     align-items: center;
                     text-decoration: none;
                     color: beige;
+
                     .footer-github-logo {
                         width: 15px;
                         margin-right: 5px;
@@ -84,13 +101,14 @@ footer {
 
     .footer-rs-ref {
         order: 2;
+
         .footer-rs-logo {
             order: 2;
             width: 70px;
         }
     }
 
-    
+
 }
 
 .wrapper {
@@ -99,20 +117,93 @@ footer {
     min-width: 1024px;
     height: 85vh;
     margin: 0 auto;
-    border: 3px solid #f0e00b;
+    border: 3px solid $darkblue;
+
     .country-list {
         width: 20%;
-        border: 2px solid #f0e00b;
+        border: 2px solid $darkblue;
         height: 85vh;
     }
 
     .wrapper-for-map {
         width: 60%;
-        border: 2px solid #0bf03d;
+        border: 2px solid $darkblue;
+
         .world-map {
             width: 100%;
             height: 75%;
-            border: 2px solid #220bf0;
+            border: 2px solid $darkblue;
         }
     }
 }
+
+
+// ---------------------left-and-right-btn-----------
+
+
+.arrow-buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    border: 1px solid $white;
+    
+    }
+    
+    .arrow-btn {
+      overflow: hidden;
+      padding: 3px 0;
+      display: flex;
+      align-items: center;
+    
+      border: none;
+      background-color: transparent;
+    }
+    .arrow-btn svg {
+      width: 20px;
+      height: auto;
+      margin: 0 0.5rem;
+      cursor: pointer;
+      overflow: visible;
+    }
+    .arrow-btn svg polygon, 
+    .arrow-btn svg path {
+      transition: all 0.5s cubic-bezier(0.2, 1, 0.3, 1);
+      fill:$white;
+    }
+    .arrow-btn svg:hover polygon, 
+    .arrow-btn svg:hover path {
+      transition: all 1s cubic-bezier(0.2, 1, 0.3, 1);
+      fill: $lightblue;
+    }
+    .arrow-btn svg:hover .arrow-6-pl {
+      animation: arrow-6-anim 1s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+    }
+    .arrow-btn svg:hover .arrow-6-pl-fixed {
+      animation: arrow-6-fixed-anim 1s cubic-bezier(0.2, 1, 0.3, 1) infinite;
+    }
+    
+    @keyframes arrow-6-anim {
+      0% {
+          opacity: 1;
+          transform: translateX(0);
+      }
+      5% {
+          transform: translateX(-0.1rem);
+      }
+      100% {
+          transform: translateX(1rem);
+          opacity: 0;
+      }
+    }
+    @keyframes arrow-6-fixed-anim {
+      5% {
+          opacity: 0;
+      }
+      20% {
+          opacity: 0.4;
+      }
+      100% {
+          opacity: 1;
+      }
+    }
