--- a/src/components/country-list/country-list.component.scss
+++ b/src/components/country-list/country-list.component.scss
@@ -1,25 +1,31 @@
-@import "./chart/chart.scss";
-
 .country-list {
 	position: relative;
 	min-height: 85%;
 }
 .country-list-wrapper {
-	padding: 5px;
-	padding-bottom: 40px;
+	padding: 0 5px;
+	padding-left: 0;
+	padding-bottom: 30px;
 	color: white;
 	overflow: hidden;
+	li {
+		padding-left: 5px;
+	}
 }
 .country-list-switch-wrapper {
 	position: absolute;
 	display: flex;
 	color: white;
-	left: 0;
-	bottom: 0;
+	left: 0px;
+	bottom: 5px;
 	width: 100%;
 	justify-content: space-between;
 	align-items: center;
-	box-shadow: inset 0 0 0 1px white;
+
+}
+
+.country-list-switch-wrapper.arrow-buttons {
+	width: calc(100%-5px);
 }
 .country-list-swich-title {
 	display: inline-block;
@@ -29,5 +35,10 @@
 	color: white;
 	border: none;
 	font-size: 20px;
-	box-shadow: inset 0 0 0 1px white;
+	// box-shadow: inset 0 0 0 1px white;
+}
+
+.country-list-title {
+	background-color: $blue;
+	margin-bottom: 5px;
 }
