--- a/src/components/map/legend/legendMap.scss
+++ b/src/components/map/legend/legendMap.scss
@@ -9,12 +9,7 @@
     right: 20px;
     cursor: pointer;
     z-index: 1100;
-    background-color: #2c0f0f;
-    color: #ff0000;
-
-    &:hover {
-        color: #ffffff;
-    }
+    @include main-btn-style;
 }
 
 .legendMapContainer.active {
@@ -30,7 +25,7 @@
     padding-top: 60px;
     z-index: 1000;
 
-    background-color: #2c0f0f;
+    background-color: $blue;
     color: #ffffff;
     transition: right 0.5s ease;
 
@@ -59,20 +54,25 @@
 }
 
 .leaflet-bar a {
-    background-color: #2c0f0f;
-    color: #ff0000;
-    border: 1px solid black;
+    background-color: $blue;
+    color: $white;
+    border: 1px solid $white;
 
     &:hover {
-        background-color: #2c0f0f;
-        color: #ffffff;
+        background-color: $darkblue;
+        color: $lightblue;
     }
+}
+
+.leaflet-bar a.leaflet-control-zoom-out {
+    border-bottom: 1px solid $white;
+
 }
 
 .leaflet-bar a.leaflet-disabled {
     cursor: default;
-    background-color: #4b3c3c;
-    color: rgb(243, 86, 86);
+    background-color: $lightblue;
+    color: $grey;
 }
 .legendMapIcon-red {
     background-color: rgb(255, 0, 0);
