--- a/src/components/map/legend/legendMap.scss
+++ b/src/components/map/legend/legendMap.scss
@@ -1,7 +1,7 @@
 @import "../../../assets/css/mixin.scss";
 .world-map {
     position: relative;
-    overflow: hidden;
+    // overflow: hidden;
 }
 
 .legendBtn {
