--- a/src/components/graph-component/graph.scss
+++ b/src/components/graph-component/graph.scss
@@ -146,25 +146,17 @@
     }
 }
 
-.full-screen-window {
-    position: fixed;
-    top: 0;
-    left: 0;
-    margin: 0 auto;
-    width: 100%;
-    height: 100%;
+// .full-screen-window {
+//     position: absolute;
+//     top: 5%;
+//     left: 5%;
+//     margin: 0 auto;
+//     width: 90%;
+//     height: 90%;
     background: $blue;
-    z-index: 1200;
-
-    canvas {
-        position: relative;
-        top: 30%;
-    }
-}
-
-.canvas-board {
-    position: absolute;
-    left: 50%;
-		top: 50%;
-    transform: translate(-50%, -50%);
-}
+//     z-index: 1200;
+//     canvas {
+//         position: relative;
+//         top: 30%;
+//     }
+// }
