--- a/src/components/keyboard/keyboard.component.scss
+++ b/src/components/keyboard/keyboard.component.scss
@@ -2,17 +2,18 @@
 .keyboard {
 	position: absolute;
 	z-index: 4;
-	right: -100%;
+	right: 0%;
 	bottom: 0;
 	width: 100%;
 	padding: 5px 0;
 	background: transparent; 
 	user-select: none;
 	transition: all 1s ease-out;
+	background-color: $blue;
 }
 
 .keyboard--hidden {
-	opacity: 0;
+	bottom: -200%;
 }
 
 .keyboard__keys {
@@ -27,7 +28,7 @@
 	border-radius: 4px;
 	border: none;
 	background: rgba(255, 255, 255, 0.2);
-	color: #ffffff;
+	color: $white;
 	font-size: 1rem;
 	outline: none;
 	cursor: pointer;
@@ -37,6 +38,19 @@
 	vertical-align: top;
 	padding: 0;
 	-webkit-tap-highlight-color: transparent;
+	transition: color 0.5s ease;
+
+	&:hover {
+		color: $lightblue;
+	}
+}
+
+.country-list-keyboard {
+	&:hover {
+		box-shadow: 0px 0px 3px 2px $lightblue;
+	}
+	cursor: pointer;
+	transition: 0.5s ease;
 }
 
 .keyboard__key:active {
