--- a/src/components/map/legend/legendMap.scss
+++ b/src/components/map/legend/legendMap.scss
@@ -10,6 +10,9 @@
     cursor: pointer;
     z-index: 1100;
     @include main-btn-style;
+    border: none;
+    display: block;
+    padding: 5px;
 }
 
 .legendMapContainer.active {
@@ -30,7 +33,7 @@
     transition: right 0.5s ease;
 
     .legendListTitle {
-        text-align: center;
+      margin-left: 30px;
     }
 
     ul {
@@ -93,3 +96,84 @@
 .legendMapIcon-green {
     background-color: rgb(94, 255, 0);
 }
+
+.legendBtn {
+    width: 35px;
+    height: 35px;
+
+    &:hover {
+        .dot {
+            background-color: $lightblue;
+        }
+    }
+    
+    .dot {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      width: 5px;
+      height: 5px;
+      background-color: $white;
+      border-radius: 10px;
+      @include transform(translate(-50%, -50%));
+      @include transition(margin .4s ease .4s, width .4s ease);
+      
+      &:nth-of-type(1) {
+        margin-top: -12px;
+        margin-left: -12px;
+        @include transform(translate(-50%, -50%) rotate(45deg));
+      }
+      
+      &:nth-of-type(2) {
+        margin-top: -12px;
+        @include transform(translate(-50%, -50%) rotate(-45deg));
+      }
+      
+      &:nth-of-type(3) {
+        margin-top: -12px;
+        margin-left: 12px;
+      }
+      
+      &:nth-of-type(4) {
+        margin-left: -12px;
+      }
+      
+      &:nth-of-type(5) {  
+        
+      }
+      
+      &:nth-of-type(6) {
+        margin-left: 12px;
+      }
+      
+      &:nth-of-type(7) {
+        margin-top: 12px;
+        margin-left: -12px;
+      }
+      
+      &:nth-of-type(8) {
+        margin-top: 12px;
+      }
+      
+      &:nth-of-type(9) {
+        margin-top: 12px;
+        margin-left: 12px;
+      }
+    }
+    
+    &.clicked {
+      .dot {
+        @include transition(margin .4s ease, width .4s ease .4s);
+        margin-left: 0;
+        margin-top: 0;
+        
+        &:nth-of-type(1) {
+          width: 35px;
+        }
+        
+        &:nth-of-type(2) {
+          width: 35px;
+        }
+      }
+    }
+  }
