--- a/src/components/map/map.scss
+++ b/src/components/map/map.scss
@@ -11,7 +11,7 @@
     position: relative;
     justify-content: center;
     align-items: center;
-    color: white;
+    color: $white;
     width: 3em;
     height: 3em;
     font-size: 0.7em;
@@ -51,9 +51,9 @@ span[data-color="green"] {
     position: absolute;
     bottom: 100%;
     width: 16em;
-    font-size: 1.4em;
+    font-size: 1.3em;
     padding: 1em;
-    background-color: $dark-aqua;
+    background-color: $lightblue;
     border-radius: 0.4em;
     margin-bottom: 1em;
     box-shadow: 0 3px 5px rgba(black, 0.9);
@@ -66,28 +66,9 @@ span[data-color="green"] {
         content: "";
         width: 1.4em;
         height: 1.4em;
-        background-color: $dark-aqua;
+        background-color: $lightblue;
         transform: rotate(45deg);
         margin-left: -0.7em;
-    }
-
-    h2 {
-        font-size: 1.5em;
-        line-height: 1.2;
-        margin-bottom: 0.1em;
-        margin-top: 0;
-    }
-
-    h3 {
-        font-size: 1.2em;
-        margin: 0.1em 0;
-        font-weight: normal;
-        color: $light-aqua;
-    }
-
-    ul,
-    p {
-        font-weight: normal;
     }
 
     ul {
